hphp/hack/test/implemented_by_hhi/implemented_by_multiple_params.hhi
<?hh
final class C {
  <<__ImplementedBy('func1', 'func2')>>
  public function myMethod(): int;
}
